--- a/src/containers/toolbar/toolbar.scss
+++ b/src/containers/toolbar/toolbar.scss
@@ -8,14 +8,14 @@
     display: flex;
     flex-direction: row;
     height: 60px;
-    width: 100%;
+    width:100%;
     z-index: 200;
     box-shadow: 0px 5px 5px $secondaryColor;
     position: fixed;
     top: 0px;
-    left: 0px;
     align-items: center;
     transition: all 600ms ease-in;
+    overflow: auto;
     &--hidden{
         top:-60px;
     }
@@ -23,8 +23,7 @@
 
 
 #logo{
-    margin: 0px 0px 0px 30px;
-    padding: 0px;
+    padding: 0px 0px 0px 30px;
     &:hover{
         background: $primaryColor;
     }
@@ -36,7 +35,7 @@
 .menu-container{
     width: 36px;
     height: 30px;
-    padding: 0 20px 0 0;
+    margin:  0 20px 0 0;
 }
 
 /* Position and sizing of burger button */
